; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_phys.c_kvtophys.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_phys.c_kvtophys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kernel_pmap = common dso_local global i32 0, align 4
@INTEL_PGSHIFT = common dso_local global i32 0, align 4
@INTEL_OFFMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvtophys(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @kernel_pmap, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @pmap_find_phys(i32 %4, i32 %5)
  %7 = trunc i64 %6 to i32
  %8 = load i32, i32* @INTEL_PGSHIFT, align 4
  %9 = shl i32 %7, %8
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @INTEL_OFFMASK, align 4
  %15 = and i32 %13, %14
  %16 = load i32, i32* %3, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %12, %1
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @pmap_find_phys(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
